--- a/app/components/progress.less
+++ b/app/components/progress.less
@@ -1,5 +1,4 @@
 .components-progress {
-  margin-top: 20px;
   width:100%;
   height:3px;
   background-color: gainsboro;
@@ -8,6 +7,6 @@
   .progress {
     width:20px;
     height:3px;
-
+    background:#ff0000;
   }
 }
